# Society-Simulator

./: .gitignore  Boe.txt  CMakeLists.txt  Joe.txt  Loe.txt  Roe.txt  Soe.txt  Yoe.txt  Zoe.txt  a.out  interpersonal.cpp  interpersonal_visualiser.cpp  predator_prey.cpp  readme.md  uml-code.txt  uml.txt
include/: Agent.h  Agent.hpp  Earth_builder.h  Interaction_Manager.hpp  Interaction_Manager_2.hpp  Relationship.h  Relationship.hpp  Stats.h  Stats.hpp  Summary_Manager.hpp  Traits.h  Traits.hpp  builder.h  dir.h  entity.h  feature.h  game.h  grid.h  perlin.h  randomwalker.h  size.h  spritesheet.hpp  terrain.h
include/characters/: actor.h  agent.h  wolf.h
include/features/: feature.h  grass.h  wall.h
include/terrain/: dirt.h  terrain.h  wall.h  water.h
logs/: Abigail Bryant.txt  Abigail Moore.txt  Addison Flores.txt  Addison Garcia.txt  Addison Lopez.txt  Alex Cook.txt  Alex Miller.txt  Alex Murphy.txt  Andrew Garcia.txt  Andrew Gonzalez.txt  Andrew Rivera.txt  Andrew Stewart.txt  Anna Bryant.txt  Anna Davis.txt  Anna Jones.txt  Anna Murphy.txt  Anna Richardson.txt  Ava Martinez.txt  Ava Miller.txt  Ava Murphy.txt  Ava Richardson.txt  Ava Smith.txt  Ava Williams.txt  Ava Young.txt  Avery Miller.txt  Avery Richardson.txt  Benjamin Alexander.txt  Benjamin Edwards.txt  Benjamin Flores.txt  Benjamin Garcia.txt  Benjamin Gonzalez.txt  Benjamin Jackson.txt  Benjamin Martinez.txt  Benjamin Porter.txt  Benjamin Young.txt  Bob.txt  Boe.txt  Brandon Collins.txt  Chloe Cook.txt  Chloe Johnson.txt  (+170 more)
src/: Agent.cpp  Earth_builder.cpp  Interaction_Manager_2.cpp  Relationship.cpp  a.out  dir.cpp  entity.cpp  feature.cpp  game.cpp  grid.cpp  main.cpp  main_2.cp  main_2.cpp  perlin.cpp  randomwalker.cpp  spritesheet.cpp  terrain.cpp
src/character/: actor.cpp  agent.cpp  wolf.cpp
src/feature/: grass.cpp  wall.cpp
src/terrain/: dirt.cpp  terrain.cpp  wall.cpp  water.cpp
srcs/: Agent.cpp  Interaction_Manager.cpp  Relationship.cpp  a.out  main.cpp
